# legate-boost

./: .clang-tidy  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  SECURITY.md  VERSION  build.sh  contributing.md  dependencies.yaml  pyproject.toml  setup.cfg  setup.py  test_hello.py
.github/workflows/: Set_Sprint_Field.yml  build.yaml  conda-python-build.yaml  conda-upload-packages.yaml  docs-build.yaml  docs.yaml  docs.yml  github-actions.yml  pr.yaml
benchmark/: common.py  dask_xgb.py  dask_xgb_scaling.py  legateboost_scaling.py  legateboost_vs_xgb_8x_v100.sh  make_charts.py  scaling.py
ci/: build_docs.sh  build_python.sh  build_wheel.sh  check_style.sh  generate-version  run_clang_tidy.sh  run_mypy.sh  run_pytests_cpu.sh  run_pytests_gpu.sh  test_python.sh  test_python_common.sh  test_python_cpu.sh  test_python_gpu.sh  upload-to-anaconda.sh
cmake/: cccl_override.json
cmake/legateboost/: add_cffi.cmake  generate_install_info.cmake  get_rapids_cmake.cmake
conda/environments/: all_cuda-118.yaml  all_cuda-122.yaml  all_cuda-125.yaml
conda/recipes/legate-boost/: build.sh  conda_build_config.yaml  meta.yaml
conda/recipes/legateboost/: build.sh  conda_build_config.yaml  meta.yaml
docs/: Makefile
docs/source/: LBClassifier.py  LBRegressor.py  Legate_Boost.rst  Legate_Boost2.rst  conf.py  creditscore.py  housing.py  index.rst  inference.py  legate-boost.rst  memory.md
docs/source/api/: callbacks.rst  dists.rst  encoders.rst  estimators.rst  index.rst  metrics.rst  models.rst  objectives.rst
docs/source/examples/: creditscore.py  housing.py  inference.py
docs/source/forecasting/: developer.rst  index.rst
examples/: custom_objective.py  hello.md  hello.py  probabilistic_regression.py  variance.md  variance.py
examples/batch_training/: README.md  batch_training.py
examples/categoricals/: categoricals.py
examples/ensembling/: README.md  ensembling.py
examples/kernel_ridge_regression/: README.md  kernel_ridge_regression.py
examples/linear_model/: README.md  linear_model.py
examples/notebook/: interpretability.ipynb  multiclass.ipynb  parameters.ipynb  probabilistic_regression.ipynb  xgboost_comparison.ipynb
examples/probabalistic_regression/: README.md  probabilistic_regression.py
examples/sparse/: README.md  sparse.py
examples/tutorial_examples/: LBClassifier.py  LBRegressor.py  creditscore.py  housing.py  inference.py  legate_boost_model.joblib  x_test.csv
hello/: __init__.py  hello.py  install_info.py
hello/test/: test_quantile.py
legateboost/: VERSION  __init__.py  _version.py  callbacks.py  dist.py  encoder.py  input_validation.py  legateboost.py  library.py  metrics.py  objectives.py  onnx_utils.py  quantise.py  shapley.py  special.py  utils.py
legateboost/models/: __init__.py  base_model.py  krr.py  linear.py  nn.py  tree.py
legateboost/test/: test_callbacks.py  test_encoder.py  test_ensembling.py  test_estimator.py  test_examples.py  test_metric.py  test_notebooks.py  test_objective.py  test_onnx.py  test_quantile.py  test_shapley.py  test_special.py  test_utils.py  test_version.py  test_with_hypothesis.py  utils.py
legateboost/test/models/: test_krr.py  test_linear.py  test_model.py  test_nn.py  test_tree.py  utils.py
legateboost/testing/: __init__.py  utils.py
legategbm/: __init__.py  hello.py  install_info.py  legategbm.py
legategbm/test/: test_quantile.py
notebook/: multiclass.ipynb
src/: CMakeLists.txt  build_nn.cc  build_nn.cu  build_tree.cc  build_tree.cu  build_tree.h  cuda_help.h  gather.cc  gather.cu  gather.h  hello_world.cc  hello_world.h  kernel_helper.cuh  legate_library.cc  legate_library.h  legateboost.h  legategbm.h  linalg.h  mapper.cc  mapper.h  math.h  metrics.cc  metrics.cu  metrics.h  predict.cc  predict.cu  predict.h  quantile.cc  special.cc  special.cu  special.h  sum.cc  update_tree.cc  utils.cc  utils.h
src/cpp_utils/: cpp_utils.cc  cpp_utils.cuh  cpp_utils.h
src/encoder/: target_encoder.cc  target_encoder.cu  target_encoder.h
src/kll/: kll_sketch.hpp
src/models/krr/: l2.cc  l2.cu  l2.h  rbf.cc  rbf.cu  rbf.h
src/models/nn/: build_nn.cc  build_nn.cu  build_nn.h
src/models/tree/: build_tree.cc  build_tree.cu  build_tree.h  matrix_types.h  predict.cc  predict.cu  predict.cu.backup  predict.h  update_tree.cc
src/special/: special.cc  special.cu  special.h
src/utils/: gather.cc  gather.cu  gather.h  preround.cc  preround.cu  preround.h
