# ref: https://scikit-build.readthedocs.io/en/latest/usage.html
# ref: 
[build-system]
requires = [
    "setuptools>=64",
    "scikit-build>=0.18",
    "cmake>=3.24",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "legateboost"
version = "0.1"
authors = [
    {name = "NVIDIA Corporation"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "cunumeric",
    "legate-core",
    "scikit-learn",
    "scipy",
    "numpy",
    "typing_extensions"
]
description = "GBM libary on Legate"
license = {file = "Apache 2.0"}
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest<8",
    "xgboost",
    "notebook",
    "nbconvert",
    "seaborn",
    "matplotlib",
    "mypy",
]
