# Copyright (c) 2022, NVIDIA CORPORATION.

[flake8]
exclude = __init__.py
max-line-length = 88
ignore =
    # line break before binary operator
    W503
    # whitespace before :
    E203
    # undefined, or defined from star imports
    F405
[mypy]
disallow_untyped_defs = true
follow_imports = skip
ignore_missing_imports = true
[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_third_party=
    numpy
known_legion=
    legion_cffi
    legion_top
known_first_party=
    legate
    lllm
    cunumeric
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,LEGION,FIRSTPARTY,LOCALFOLDER
skip=
    .eggs
    .git
    .mypy_cache
    .tox
    .venv
    _build
    build
    dist
    legion
    __init__.py

[options]
packages = find:
python_requires = >=3.8
